ghost/stereopinions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stereopinions
  namespace: ghost
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx-internal"
  rules:
    - host: stereopinions.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stereopinions
                port:
                  number: 2368
  tls:
    - hosts:
        - stereopinions.net
        - www.stereopinions.net
      secretName: stereopinions-net-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stereopinions-ext
  namespace: ghost
spec:
  ingressClassName: "nginx-external"
  rules:
    - host: stereopinions.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stereopinions
                port:
                  number: 2368
  tls:
    - hosts:
        - stereopinions.net
        - www.stereopinions.net
      secretName: stereopinions-net-cert
